tests/NormalTests/paczka1/small_fuzzy/32473746.err
Error in line 1: rWX49 S3 41,9
Error in line 2: MNUMPrTuE A851 41,2
Error in line 12: A295 A295 353,88
